# DifferentUtils

./: .gitignore  CMakeLists.txt  README.md  main.c  main.s
include/: numeral_system_converter.h
source/: numeral_system_converter.c  numeral_system_converter.cpp
test/: numeral_system_converter.c  numeral_system_converter.cpp
